# kaggle-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/kaggle/: commit-and-push.md  create-dashboard-page.md  create-experiment.md  record-experiment-result.md
.claude/skills/kaggle-commit-and-push/: SKILL.md
.claude/skills/kaggle-create-dashboard-page/: SKILL.md
.claude/skills/kaggle-create-experiment/: SKILL.md
.claude/skills/kaggle-record-experiment-result/: SKILL.md
app/: main.py
app/templates/: index.html
docs/: README.md
docs/official/: competition.md
experiments/: README_TEMPLATE.md
experiments/exp000_sample/: README.md  config.yaml  run.py
src/exp000-sample/: data.py  model.py  train.py
src/exp000-sample/config/: config.yaml
utils/: env.py
