[project]
name = "kaggle-template"
version = "3.0.0"
description = "Kaggle コンペティション用実験テンプレート"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "kaggle>=1.5",
    "click>=8.0",
    "psutil>=5.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.5",
    "pytest>=8.0",
]
gpu = [
    "torch>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["experiments", "utils", "tools", "notebooks"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (line-length で管理)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["utils", "experiments", "tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv.build-backend]
module-name = "utils"
module-root = ""
